--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@babel/runtime": "^7.10.5",
     "meteor-node-stubs": "^1.0.1",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "simpl-schema": "^1.10.0"
   },
   "meteor": {
     "mainModule": {
