--- a/package.json
+++ b/package.json
@@ -1,6 +1,15 @@
 {
   "name": "fppg",
   "private": true,
+  "babel": {
+    "env": {
+      "COVERAGE": {
+        "plugins": [
+          "istanbul"
+        ]
+      }
+    }
+  },
   "scripts": {
     "start": "meteor run",
     "test": "meteor test --once --driver-package meteortesting:mocha",
@@ -21,5 +30,8 @@
       "server": "server/main.js"
     },
     "testModule": "tests/main.js"
+  },
+  "devDependencies": {
+    "babel-plugin-istanbul": "^6.0.0"
   }
 }
